--- a/version-acoplada/main.yml
+++ b/version-acoplada/main.yml
@@ -17,6 +17,10 @@ Parameters:
   ImageUri:
     Type: String
     Description: URI de la imagen Docker en ECR
+  
+  VpcCidr:
+    Type: String
+    Description: CIDR permitido para ECS
 
 Resources:
 
@@ -29,7 +33,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: 8080
           ToPort: 8080
-          CidrIp: 0.0.0.0/0
+          CidrIp: !Ref VpcCidr
 
   ECSCluster:
     Type: AWS::ECS::Cluster
